20230119 - Correções de funções deprecated por conta de atualização java 11