@@ -25,7 +25,7 @@ public class EstadoConverter implements Converter<Estado> {
 	public Estado getAsObject(FacesContext context, UIComponent component, String value) {
 		Estado retorno = null;
 		if(StringUtils.isNotBlank(value)) {
-			retorno = bo.find(new Long(value));
+			retorno = bo.find(Long.valueOf(value));
 		}
 		return retorno;
 	}
