@@ -25,7 +25,7 @@ public class RegLancamentoConverter implements Converter<RegLancamento> {
 	public RegLancamento getAsObject(FacesContext context, UIComponent component, String value) {
 		RegLancamento retorno = null;
 		if(StringUtils.isNotBlank(value)) {
-			retorno = bo.findByPrimaryKey(new Long(value));
+			retorno = bo.findByPrimaryKey(Long.valueOf(value));
 		}
 		return retorno;
 	}
