@@ -25,7 +25,7 @@ public class UsuarioConverter implements Converter<Usuario> {
 	public Usuario getAsObject(FacesContext context, UIComponent component, String value) {
 		Usuario retorno = null;
 		if(StringUtils.isNotBlank(value)) {
-			retorno = bo.find(new Long(value));
+			retorno = bo.find(Long.valueOf(value));
 		}
 		return retorno;
 	}
